--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -30,3 +30,11 @@ body{
   /*Aplicando color al body*/
   background-color: var(--bg-color);
 }
+
+.nav-container{
+  width: 100%;
+  height: 155px;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+}
