--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap');
 
 /*Estableciendo variables*/
-:root{
+:root {
   --bg-color: #F2F5F7;
   --primary-color: #0E0F10;
   --secondary-color: #FADE3C;
@@ -14,10 +14,13 @@
   --text-accent-color: #868686;
 }
 
-*,::after, ::before{
+*,
+::after,
+::before {
   /*Reiniciando estilos*/
   margin: 0;
   padding: 0;
+  border: 0;
   box-sizing: border-box;
 
   /*Aplicando el estilo de fuente*/
@@ -26,15 +29,392 @@
   color: var(--text-color);
 }
 
-body{
+body {
   /*Aplicando color al body*/
   background-color: var(--bg-color);
 }
 
-.nav-container{
+/*Estilos del nav-container*/
+.header-principal.nav-container {
+  padding: 10px 10px;
+  height: 70px;
   width: 100%;
-  height: 155px;
   background-color: var(--primary-color);
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+
+  a {
+    text-decoration: none;
+  }
+}
+
+/*Estilos para la sección 2 del navbar*/
+.nav-section-2 {
+  display: flex;
+  gap: 10px;
+}
+
+/*Estilos para el nav-logo*/
+.nav-logo {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  position: relative;
+  left: 50px;
+
+  .nav-logo-img img {
+    height: 100%;
+  }
+}
+
+/*Estilos para el boton del carrito*/
+.shopping {
+  display: flex;
+  align-items: center;
+}
+
+#shopping-button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: transparent;
+  position: relative;
+
+  span {
+    font-size: 35px;
+    color: var(--text-color-revert);
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  20% {
+    transform: translateX(-3px);
+  }
+
+  40% {
+    transform: translateX(3px);
+  }
+
+  60% {
+    transform: translateX(-3px);
+  }
+
+  80% {
+    transform: translateX(3px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+#shopping-button:hover {
+  animation: shake .7s ease-in-out;
+}
+
+#shopping-button::after {
+  content: attr(data-count-item-shopping);
+  position: absolute;
+  background-color: var(--secondary-color);
+  height: 18px;
+  width: 18px;
+  font-size: 8px;
+  font-weight: bold;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0px;
+  left: 65%;
+}
+
+/*Estilos para el botón del nav menu*/
+.nav__burger__menu {
+  cursor: pointer;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 2rem;
+  height: 3.5rem;
+  border: 0;
+  background: transparent;
+  gap: 5px;
+}
+
+.nav__burger__menu>div {
+  background: var(--text-color-revert);
+  height: 3.2px;
+  width: 100%;
+  border-radius: 5px;
+  transition: transform .5s;
+  transform-origin: left;
+}
+
+.navbar__burger__menu--open {
+  gap: 8.2px;
+}
+
+.navbar__burger__menu--open div:first-child {
+  transform: rotate(45deg);
+}
+
+.navbar__burger__menu--open div:nth-child(2) {
+  opacity: 0;
+}
+
+.navbar__burger__menu--open div:last-child {
+  transform: rotate(-45deg);
+}
+
+/*Estilos para el navbar*/
+/*Overlay*/
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* opacity: 0; */
+  /* adjust the opacity to your liking */
+  display: none;
+
+  transition: opacity .2s allow-discrete;
+}
+
+.navbar--open~.overlay {
+  display: block;
+}
+
+.nav-section-2 .navbar {
+  display: none;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: all 0.3s allow-discrete;
+  z-index: 1;
+  position: fixed;
+  left: 50%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: var(--secondary-color);
+  overflow-y: auto;
+  border-radius: 3px;
+
+  .nav__menu__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+
+    p {
+      font-weight: bold;
+      flex: 1;
+      text-align: center;
+      left: 20px;
+      position: relative;
+    }
+
+    .navbar__burger__menu--open {
+      margin-top: 5px;
+
+      div {
+        background-color: var(--primary-color);
+      }
+    }
+  }
+
+  .navbar-list {
+    height: calc(100% - 25px);
+    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    li {
+      width: 100%;
+    }
+  }
+}
+
+.nav-section-2 .navbar--open {
+  z-index: 1;
+  display: block;
+  transform: translateX(0);
+  opacity: 1;
+
+  @starting-style {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+}
+
+
+/*Estilo para los items del navbar*/
+.navbar-list,
+.navbar-expanded-list {
+  list-style: none;
+  text-decoration: none;
+}
+
+.navbar-list-item {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  color: var(--text-color-revert);
+  background-color: var(--primary-color);
+  padding: 10px;
+  border-radius: 10px;
+  transition: scale .3s;
+}
+
+.navbar-list-item:hover {
+  scale: 0.9;
+}
+
+/*Para las listas expansibles*/
+.navbar-expand-label {
+  display: flex;
+  justify-content: center;
+
+  span {
+    color: var(--text-color-revert);
+  }
+}
+
+.navbar-expanded-list {
+  display: none;
+  transition: opacity, display;
+  transition-duration: 0.5s;
+  opacity: 0;
+}
+
+.navbar-expand-container {
+  position: relative;
+}
+
+
+.navbar-expand-container:hover>.navbar-expanded-list {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  opacity: 1;
+  left: 45%;
+  margin-top: 1.5px;
+  width: 50%;
+  background-color: var(--bg-color);
+  border: 2px solid var(--primary-color);
+  padding: 10px;
+  border-radius: 7px;
+
+  @starting-style {
+    opacity: 0;
+  }
+}
+
+.navbar-expanded-list:hover .navbar-expanded-list {
+  width: 100%;
+  left: 30%;
+}
+
+@media (width >=1024px) {
+
+  /*Estilos para el menu del navbar*/
+  .nav__menu__container {
+    display: none !important;
+  }
+
+  /*Estilos para el logo*/
+  .nav-logo {
+    flex: 0;
+  }
+
+  .header-principal.nav-container {
+    padding-right: 20px;
+  }
+
+  .nav-section-2 {
+    position: relative;
+    justify-content: center;
+  }
+
+  .nav-section-2 .navbar {
+    overflow-y: initial;
+    position: static;
+    display: flex;
+    opacity: 1;
+    transform: translateX(0);
+    background-color: transparent;
+    align-items: center;
+    .navbar-list {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0;
+      gap: 5rem;
+      position: relative;
+
+      li {
+        width: 100%;
+      }
+    }
+  }
+
+  .navbar-list-item {
+    position: relative;
+    padding: 0;
+    border-bottom: 2px solid transparent;
+    border-radius: 0;
+    width: max-content;
+  }
+
+  .navbar-list-item::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background-color: var(--secondary-color);
+    height: 2px;
+    transition: width 0.3s ease-in-out;
+  }
+
+  .navbar-list-item:hover{
+    scale: 1;
+  }
+
+  .navbar-list-item:hover::after{
+    width: 75%;
+  }
+
+  .navbar-expand-container:hover>.navbar-expanded-list {
+    left: 0;
+    width: 100%;
+    background-color: var(--bg-color);
+    border: 2px solid var(--primary-color);
+    padding: 10px;
+    border-radius: 7px;
+  
+    @starting-style {
+      opacity: 0;
+    }
+  }
+
+  .navbar-expanded-item .navbar-list-item{
+    width: 100%;
+    border-radius: 7px;
+    border: 0;
+  }
 }
