--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -61,10 +61,9 @@ body {
 .nav-logo {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   height: 50px;
   position: relative;
-  left: 50px;
 
   .nav-logo-img img {
     height: 100%;
