--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -238,6 +238,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    overflow: auto;
 
     .nav-item {
       width: 100%;
@@ -401,6 +402,7 @@ body {
       padding: 0;
       gap: 5rem;
       position: relative;
+      overflow: initial;
     }
   }
 
