--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -198,7 +198,7 @@ input[type="checkbox"]:checked {
   flex-wrap: wrap;
   gap: 20px;
   display: block;
-  transition: transform 0.5s;
+  transition: transform 0.5s ease-in;
 }
 
 .filter-active.show-filter:nth-child(even){
