feat: Maquetando las cards y modal de los productos

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -347,9 +347,25 @@ body {
   border-radius: 10px;
 }
 
+.general-skeleton-text{
+  padding: 10px;
+  width: 100%;
+  margin: 10px 0;
+}
+
 /*Método para evitar el scroll cuando el navbar esta activo*/
 .body-no-scroll {
   overflow-y: hidden;
+}
+
+/*Estilos para los botones en general*/
+.general-btn{
+  background-color: var(--primary-color);
+  color: var(--text-color-revert);
+  text-align: center;
+  padding: 10px 0;
+  border-radius: 13px;
+  cursor: pointer;
 }
 
 @media (width >=1024px) {
