--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,6 +1,10 @@
 /*Sección del parallax*/
-body{
-  height: 100dvh !important;
+main {
+  margin-bottom: 10px;
+}
+
+.body-no-scroll-modal-opened {
+  overflow-y: hidden !important;
 }
 
 .banner-container {
@@ -88,6 +92,7 @@ body{
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 5px;
 
   .filter-order-button {
     cursor: pointer;
@@ -140,39 +145,41 @@ body{
   margin-left: 10px;
 }
 
-[popovertarget="filter-options-panel"]{
+[popovertarget="filter-options-panel"] {
   anchor-name: --filter-options;
 }
 
-[popovertarget="order-options-panel"]{
+[popovertarget="order-options-panel"] {
   anchor-name: --order-options;
 }
 
-#order-options-panel:popover-open + .filter-order-button::after{
+#order-options-panel:popover-open+.filter-order-button::after {
   width: 200px;
 }
 
-.filter-options-panel:popover-open + .filter-order-button::after{
+.filter-options-panel:popover-open+.filter-order-button::after {
   width: 90%;
 }
 
-#order-options-panel:popover-open{
+#order-options-panel:popover-open {
   opacity: 1;
 
-  @starting-style{
+  @starting-style {
     opacity: 0;
   }
 }
 
-.filter-options-panel:popover-open{
+.filter-options-panel:popover-open {
   opacity: 1;
-  @starting-style{
+
+  @starting-style {
     opacity: 0;
   }
 }
 
 
-.filter-options-panel, #order-options-panel {
+.filter-options-panel,
+#order-options-panel {
   margin-top: 10px;
   position: absolute;
   padding: 4px 10px;
@@ -185,6 +192,7 @@ body{
   opacity: 0;
   transition: opacity .8s allow-discrete;
   transform-origin: top left;
+
   ul {
     list-style: none;
     text-align: left;
@@ -192,7 +200,7 @@ body{
   }
 }
 
-#order-options-panel{
+#order-options-panel {
   width: fit-content;
   position-anchor: --order-options;
   left: calc(anchor(--order-options left) + 20px);
@@ -201,7 +209,8 @@ body{
 
 input[type="checkbox"] {
   appearance: none;
-  background-color: var(--bg-skeleton-color); /* Background negro */
+  background-color: var(--bg-skeleton-color);
+  /* Background negro */
   padding: 5px;
   border: none;
   border-radius: 3px;
@@ -212,7 +221,7 @@ input[type="checkbox"]:checked {
   background-color: var(--primary-color);
 }
 
-input[type="radio"]{
+input[type="radio"] {
   position: relative;
   appearance: none;
   background-color: var(--primary-color);
@@ -228,13 +237,14 @@ input[type="radio"]:checked::before {
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: var(--secondary-color); /* Círculo amarillo */
+  background-color: var(--secondary-color);
+  /* Círculo amarillo */
   position: absolute;
   transform: translate(-52%, -51%);
 }
 
 
-#filters-active{
+#filters-active {
   width: 100%;
   display: flex;
   gap: 20px;
@@ -242,20 +252,20 @@ input[type="radio"]:checked::before {
   transition: transform 0.5s ease-in;
 }
 
-.filter-active.show-filter:nth-child(even){
+.filter-active.show-filter:nth-child(even) {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-border-color);
 
   color: var(--text-color-revert);
 }
 
-.filter-active.show-filter:nth-child(odd){
+.filter-active.show-filter:nth-child(odd) {
   background-color: var(--secondary-color);
   border: 2px solid var(--primary-color);
 }
 
 
-.filter-active{
+.filter-active {
   display: flex;
   height: 3.5rem;
   border-radius: 10px;
@@ -264,16 +274,18 @@ input[type="radio"]:checked::before {
   margin-top: 3px;
   align-items: center;
   justify-content: flex-end;
+  margin-bottom: 10px;
   transition: opacity, display, transform;
-  transition-duration: .5s; 
+  transition-duration: .5s;
   transition-behavior: allow-discrete;
   display: none;
   opacity: 0;
-  @starting-style{
+
+  @starting-style {
     opacity: 1;
   }
 
-  .filter-text{
+  .filter-text {
     color: inherit;
     flex-grow: 1;
     text-align: center;
@@ -284,7 +296,8 @@ input[type="radio"]:checked::before {
     width: max-content;
   }
 
-  .discart-filter-button, #discart-filter-all-button{
+  .discart-filter-button,
+  #discart-filter-all-button {
     color: inherit;
     background-color: transparent;
     cursor: pointer;
@@ -292,21 +305,243 @@ input[type="radio"]:checked::before {
   }
 }
 
-#discart-filter-all-button{
+#discart-filter-all-button {
   cursor: pointer;
-  .filter-text{
+
+  .filter-text {
     left: 0;
   }
 }
 
-.filter-active.show-filter{
+.filter-active.show-filter {
   display: flex;
   opacity: 1;
-  @starting-style{
+
+  @starting-style {
     opacity: 0;
   }
 }
 
+/*Sección de los productos*/
+#products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg-color);
+  overflow: hidden;
+  border: 2px solid var(--primary-border-color);
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px #929292,
+    -5px -5px 10px #ffffff;
+  padding: 30px;
+  gap: 20px;
+
+  .product-img-container {
+    height: 261px;
+    border-radius: 7px;
+    overflow: hidden;
+
+    .product-img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .product-info {
+    width: 100%;
+
+    .product-info-title {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+
+    .product-info-category {
+      color: var(--text-accent-color);
+      font-weight: bold;
+    }
+
+    .product-info-price {
+      display: block;
+      font-weight: bold;
+      font-size: 2rem;
+    }
+  }
+}
+
+.product-card:hover {
+  background-color: var(--secondary-color);
+  border-width: 5px;
+
+  border-color: var(--secondary-border-color);
+}
+
+.product-card.product-skeleton:hover {
+  background-color: var(--bg-color);
+  border-width: 2px;
+  border-color: var(--primary-border-color);
+}
+
+.general-btn {
+  width: 100%;
+}
+
+.product-skeleton {
+
+  .product-info-title {
+    padding: 15px;
+  }
+
+  .product-info-category,
+  .product-info-price {
+    width: 50%;
+  }
+
+  .product-info-price {
+    padding: 20px;
+  }
+
+  .general-btn {
+    padding: 25px;
+  }
+}
+
+/*Sección para el modal*/
+dialog {
+  transition: scale .3s ease-in-out,
+    display .3s allow-discrete;
+  scale: 0;
+}
+
+dialog[open] {
+  scale: 1;
+
+  @starting-style {
+    scale: 0;
+  }
+}
+
+#addCartModal::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#addCartModal {
+  margin: auto;
+  border: 5px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  padding: 10px;
+  width: 100%;
+  border-radius: 10px;
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+
+    #close-modal {
+      padding: 5px 10px;
+      border-radius: 100%;
+      background-color: var(--primary-color);
+      color: var(--text-color-revert);
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+
+  .product-section {
+    display: grid;
+    gap: .5rem;
+    grid-template-columns: 1fr;
+
+    .product-img-container {
+      border-radius: 10px;
+      padding: 10px;
+      justify-self: center;
+      max-height: 350px;
+      overflow: hidden;
+
+      .product-img {
+        box-shadow: -11px -9px 0px 0px #000;
+        border-radius: 7px;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .product-details {
+      border: 3px solid var(--primary-color);
+      padding: 1.5rem;
+
+      .product-title {
+        width: 100%;
+        text-align: center;
+        text-decoration: underline;
+        color: var(--text-color);
+      }
+
+      .product-quantity-section {
+        display: flex;
+        flex-direction: column;
+        gap: 2.5rem;
+        justify-content: space-between;
+        width: 100%;
+
+        p {
+          width: 100%;
+          text-align: center;
+          font-weight: bold;
+          color: var(--text-color);
+        }
+
+        .quantity-section {
+          display: flex;
+          justify-content: space-between;
+        }
+
+        .confirm-add-product {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+      }
+    }
+  }
+
+  #product-quantity {
+    width: 50%;
+    display: grid;
+    place-content: center;
+    background-color: var(--primary-color);
+    color: var(--text-color-revert);
+    border-radius: 10px;
+  }
+
+  .quantity-btn {
+    padding: .63rem 1rem;
+    background-color: var(--primary-color);
+    color: var(--text-color-revert);
+    border-radius: 50%;
+  }
+
+  #modal-product-price {
+    width: 100%;
+    text-align: center;
+    color: var(--text-color);
+    font-weight: bold;
+    font-size: large;
+  }
+}
+
+/*Media query para tablets en adelante*/
 @media (width >=768px) {
   .banner-container {
     height: 350px;
@@ -324,19 +559,20 @@ input[type="radio"]:checked::before {
     }
   }
 
-  .filter-options-panel:popover-open + .filter-order-button::after{
+  .filter-options-panel:popover-open+.filter-order-button::after {
     width: 125%;
   }
 
-  #order-options-panel{
-    left: calc(anchor(--order-options center));;
+  #order-options-panel {
+    left: calc(anchor(--order-options center));
+    ;
   }
 
-  #order-options-panel:popover-open + .filter-order-button::after{
+  #order-options-panel:popover-open+.filter-order-button::after {
     width: 300px;
   }
-  
-  #filters-active{
+
+  #filters-active {
     display: flex;
     flex-wrap: wrap;
   }
@@ -347,6 +583,15 @@ input[type="radio"]:checked::before {
 
   .star-wars .banner-content img {
     height: 200px;
+  }
+
+  /*Sección del modal*/
+  #addCartModal {
+    max-width: 500px;
+
+    .product-section {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 }
 
@@ -364,8 +609,18 @@ input[type="radio"]:checked::before {
   border-radius: 5px;
 }
 
-@media (width >= 1024px){
-  #order-options-panel{
-    left: calc(anchor(--order-options right) - 15%);;
+/*Media query para pc en adelante*/
+@media (width >=1024px) {
+  #order-options-panel {
+    left: calc(anchor(--order-options right) - 15%);
+    ;
+  }
+
+  #products-container {
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  }
+
+  #addCartModal {
+    max-width: 600px;
   }
 }
