--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -469,3 +469,35 @@ body {
   text-align: center;
   border-radius: 5px;
 } */
+
+/*Método para añadir el toTopButton*/
+#to-top-btn{
+  cursor: pointer;
+  aspect-ratio: 1/1;
+  height: 75px;
+  font-size: xx-large;
+  color: var(--text-color);
+  border-radius: 50%;
+  bottom: 10px;
+  right: 10px;
+  background-color: var(--secondary-color);
+  position: fixed;
+  transition: opacity .3s ease-in,
+  display .3s allow-discrete;
+
+  display: none;
+  opacity: 0;
+
+  @starting-style{
+    opacity 1;
+  }
+}
+
+#to-top-btn.show{
+  display: block;
+  opacity: 1;
+  
+  @starting-style{
+    opacity 0;
+  }
+}
