--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -306,14 +306,14 @@ input[type="radio"]:checked::before {
   transition: transform 0.5s ease-in;
 }
 
-.filter-active.show-filter:nth-child(even) {
+.filter-active:nth-child(even of .show-filter) {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-border-color);
 
   color: var(--text-color-revert);
 }
 
-.filter-active.show-filter:nth-child(odd) {
+.filter-active:nth-child(odd of .show-filter) {
   background-color: var(--secondary-color);
   border: 2px solid var(--primary-color);
 }
@@ -331,7 +331,7 @@ input[type="radio"]:checked::before {
   margin-bottom: 10px;
   transition: opacity, display, transform;
   transition-duration: .5s;
-  transition-behavior: allow-discrete;
+  transition-behavior: ease-in-out;
   display: none;
   opacity: 0;
 
