--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -46,6 +46,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 999;
+
   a {
     text-decoration: none;
   }
@@ -326,6 +327,7 @@ body {
   width: 100%;
   left: 30%;
 }
+
 /*General Skeleton*/
 @keyframes loading-skeleton {
 
@@ -353,12 +355,13 @@ body {
 }
 
 @media (width >=1024px) {
+
   /*No evitar el scroll*/
   .body-no-scroll {
     overflow-y: initial;
   }
 
-  .overlay{
+  .overlay {
     display: none !important;
   }
 
@@ -453,25 +456,8 @@ body {
   }
 }
 
-/* PARALLAX */
-
-/* 
-.parallax-america {
-  background: #fff fixed no-repeat 50% 50%;
-  background-size: cover;
-}
-
-.titulo-america {
-  background-image: url(../img/america-header.jpg);
-  height: 400px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  border-radius: 5px;
-} */
-
 /*Método para añadir el toTopButton*/
-#to-top-btn{
+#to-top-btn {
   cursor: pointer;
   aspect-ratio: 1/1;
   height: 75px;
@@ -483,21 +469,157 @@ body {
   background-color: var(--secondary-color);
   position: fixed;
   transition: opacity .3s ease-in,
-  display .3s allow-discrete;
+    display .3s allow-discrete;
 
   display: none;
   opacity: 0;
 
-  @starting-style{
+  @starting-style {
     opacity 1;
   }
 }
 
-#to-top-btn.show{
+#to-top-btn.show {
   display: block;
   opacity: 1;
-  
-  @starting-style{
+
+  @starting-style {
     opacity 0;
+  }
+}
+
+/* ----- ESTILOS PARA INDEX ----- */
+
+/* ----- BANNER HERO ----- */
+  .container {
+    padding: 5%;
+  }
+
+.hero-banner {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-bottom: 0;
+
+  .hero-banner-content {
+    .hero-banner-title {
+      font-size: 80px;
+      font-weight: 600;
+    }
+
+    img {
+      position: relative;
+      top: -40px;
+    }
+  }
+
+  .hero-banner-logo {
+    img {
+      width: 450px;
+    }
+  }
+}
+
+/* ----- SECCIÓN DE RAZONES PARA COMPRAR ----- */
+
+#why-to-buy-cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 30px;
+}
+
+.why-to-buy-title {
+  font-size: 2.5em;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+.why-to-buy-card {
+  flex: 1;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+  position: relative;
+
+  .why-to-buy-card-title {
+    font-size: 1.5em;
+    font-weight: 600;
+  }
+
+  .why-to-buy-card-description {
+    font-size: 1em;
+    color: var(--text-accent-color);
+  }
+
+  span {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: var(--secondary-color);
+    padding: 10px;
+    border-radius: 50%;
+  }
+
+}
+
+/* ----- SECCIÓN DE PRODUCTOS FAVORITOS ----- */
+.fav-products-section {
+  background-color: var(--secondary-color);
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    gap: 30px;
+    padding-right: 0;
+  }
+}
+
+.fav-products-title {
+  font-size: 2.5em;
+  font-weight: 700;
+}
+
+#fav-products-swiper {
+  display: flex;
+  overflow-x: auto;
+  scroll-margin-top: 10px;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+#fav-products-swiper:hover {
+  scrollbar-color: var(--primary-color) transparent;
+}
+
+.swiper-slide {
+  flex: 0 0 auto;
+  width: 80%;
+  scroll-snap-align: start;
+  margin-right: 10px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* ----- MEDIA QUERIES ----- */
+@media screen and (width <=1024px) {
+
+  .hero-banner {
+    justify-content: center;
+  }
+
+  .hero-banner-content .hero-banner-title {
+    text-align: center;
+    font-size: 2.5em !important;
+  }
+
+  .hero-banner-content img {
+    width: 80%;
+  }
+
+  .hero-banner-logo {
+    display: none;
   }
 }
