fix:Tamaño de imagenes en las cards

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -385,6 +385,7 @@ input[type="radio"]:checked::before {
 
 .product-card {
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   background-color: var(--bg-color);
   overflow: hidden;
@@ -393,13 +394,13 @@ input[type="radio"]:checked::before {
   box-shadow: 5px 5px 10px #929292,
     -5px -5px 10px #ffffff;
   padding: 30px;
-  gap: 20px;
+  gap: 10px;
   margin: 5px;
   cursor: pointer;
-  /* max-width: 400px; */
 
   .product-img-container {
     height: 261px;
+    max-height: 261px;
     border-radius: 7px;
     overflow: hidden;
 
