--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -39,50 +39,50 @@ main {
   grid-template-columns: 1fr 1fr; /* Define dos columnas de igual tamaño */
   grid-template-rows: auto auto; /* Define dos filas automáticas */
   grid-template-areas:
-    "images info"
-    "comment comment";
+    "images images info"
+    "comment comment comment";
 }
 
 .main-content-image {
   grid-area: images;
-}
-
-.main-content-image .main-content-image-section {
-  background-color: var(--bg-skeleton-color);
-  width: 100%;
-  display: flex;
   
-}
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-image 
-{
-  background-color: var(--bg-skeleton-color);
-  width: 80%;
-  padding: 20px;
+  .main-content-image-section{
+    width: 80%;
+    display: flex;
+    
+    .main-content-image-section-images
+    {
+      display: flex;
+      flex-direction: column;
+      
+      .main-content-image-section-image
+      {
+        padding: 10px;
+      }
+    }
+    
+    .main-content-image-section-column{
+      align-items: center;
+      display: flex;
+      flex-direction: column; /* Cambiar la dirección a columna para que el div esté debajo */
+      .main-content-image-section-image 
+      {
+        border-radius: 10px;
+        padding: 20px;
+        width: 80%;
+      }
+      .main-content-image-section-shopping{
+        background-color: var(--bg-skeleton-color);
+        border-radius: 10px;
+        padding: 10px;
+      }
+    }
+  }
 }
 
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-images
-{
-  background-color: var(--bg-skeleton-color);
-  display: flex;
-  flex-direction: column;
-  
-}
-
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-images
-.main-content-image-section-image
-{
-  padding: 10px;
-}
 .main-content-info {
   grid-area: info;
 }
-
 .main-content-info .main-content-info-section {
   background-color: red;
   width: 100%;
@@ -108,33 +108,33 @@ main {
       'comment'; /* Las áreas se apilan verticalmente */
   }
 
-.main-content-image .main-content-image-section {
-  width: 100%;
-  flex-direction: column-reverse; 
-}
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-image 
-{
-  width: 100%;
-  padding: 10px;
-}
+  .main-content-image  {
+    .main-content-image-section{
+      width: 100%;
+      flex-direction: column-reverse; 
+      
+      .main-content-image-section-images
+      {
+        width: 100%;
+        height: 10%;
+        flex-direction:row;
+        
+        .main-content-image-section-image
+        {
+          padding: 10px;
+        }
+      }
 
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-images
-{
-  width: 100%;
-  height: 10%;
-  flex-direction:row;
-  
-}
+      .main-content-image-section-column{
+        display: flex;
+        flex-direction: column-reverse; /* Cambiar la dirección a columna para que el div esté debajo */
 
-.main-content-image 
-.main-content-image-section 
-.main-content-image-section-images >
-.main-content-image-section-image
-{
-  padding: 10px;
-}
+        .main-content-image-section-image 
+        {
+          width: 100%;
+          padding: 10px;
+        }
+      }
+    }
+  }
 }
