--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -7,7 +7,7 @@
   --primary-color: #0e0f10;
   --secondary-color: #fade3c;
   --bg-skeleton-color: #d9d9d9;
-  --primary-border-color: #878787;
+  --primary-border-color: #bdbdbd;
   --secondary-borer-color: #000000;
   --text-color: #000000;
   --text-color-revert: #f2f5f7;
@@ -36,11 +36,13 @@ body {
 
 main {
   display: grid; /* Necesario para que funcione el grid */
-  grid-template-columns: 1fr 1fr; /* Define dos columnas de igual tamaño */
-  grid-template-rows: auto auto; /* Define dos filas automáticas */
+  grid-template-columns: 1.7fr 0.3fr 1.2fr; 
+  grid-template-rows: 1.6fr 0.5fr 0.9fr; 
+  gap: 0px 0px; 
   grid-template-areas:
     "images images info"
     "comment comment comment";
+    padding: 20px;
 }
 
 .main-content-image {
@@ -64,7 +66,8 @@ main {
     .main-content-image-section-column{
       align-items: center;
       display: flex;
-      flex-direction: column; /* Cambiar la dirección a columna para que el div esté debajo */
+      flex-direction: column;
+      width: 100%;
       .main-content-image-section-image 
       {
         border-radius: 10px;
@@ -80,14 +83,7 @@ main {
   }
 }
 
-.main-content-info {
-  grid-area: info;
-}
-.main-content-info .main-content-info-section {
-  background-color: red;
-  width: 100%;
-  
-}
+
 
 .main-content-comments {
   grid-area: comment;
