--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -3,14 +3,14 @@
 
 /*Estableciendo variables*/
 :root {
-  --bg-color: #f2f5f7;
-  --primary-color: #0e0f10;
-  --secondary-color: #fade3c;
-  --bg-skeleton-color: #d9d9d9;
-  --primary-border-color: #bdbdbd;
+  --bg-color: #F2F5F7;
+  --primary-color: #0E0F10;
+  --secondary-color: #FADE3C;
+  --bg-skeleton-color: #D9D9D9;
+  --primary-border-color: #878787;
   --secondary-borer-color: #000000;
   --text-color: #000000;
-  --text-color-revert: #f2f5f7;
+  --text-color-revert: #F2F5F7;
   --text-accent-color: #868686;
 }
 
@@ -35,100 +35,149 @@ body {
 }
 
 main {
-  display: grid; /* Necesario para que funcione el grid */
-  grid-template-columns: 1.7fr 0.3fr 1.2fr; 
-  grid-template-rows: 1.6fr 0.5fr 0.9fr; 
-  gap: 0px 0px; 
+  display: grid;
+  /* Necesario para que funcione el grid */
+  grid-template-columns: 1.7fr 0.3fr 1.2fr;
+  grid-template-rows: 0.8fr 0.5fr 0.9fr;
+  gap: 0px 0px;
   grid-template-areas:
     "images images info"
     "comment comment comment";
-    padding: 20px;
-}
+  padding: 20px 70px;
 
-.main-content-image {
-  grid-area: images;
-  
-  .main-content-image-section{
-    width: 80%;
-    display: flex;
-    
-    .main-content-image-section-images
-    {
-      display: flex;
-      flex-direction: column;
-      
-      .main-content-image-section-image
-      {
-        padding: 10px;
-      }
-    }
-    
-    .main-content-image-section-column{
-      align-items: center;
-      display: flex;
-      flex-direction: column;
+
+  .main-content-image {
+    grid-area: images;
+
+    .image-section {
       width: 100%;
-      .main-content-image-section-image 
-      {
-        border-radius: 10px;
-        padding: 20px;
-        width: 80%;
-      }
-      .main-content-image-section-shopping{
-        background-color: var(--bg-skeleton-color);
-        border-radius: 10px;
-        padding: 10px;
-      }
-    }
-  }
-}
+      display: flex;
 
+      .section-images {
+        display: flex;
+        flex-direction: column;
 
-
-.main-content-comments {
-  grid-area: comment;
-}
-
-.main-content-comments .main-content-comments-section {
-  background-color: blue;
-  width: 100%;
-  
-}
-
-@media (max-width: 768px) {
-  main {
-    grid-template-columns: 1fr; /* Una sola columna */
-    grid-template-areas: 
-      'images'
-      'info'
-      'comment'; /* Las áreas se apilan verticalmente */
-  }
-
-  .main-content-image  {
-    .main-content-image-section{
-      width: 100%;
-      flex-direction: column-reverse; 
-      
-      .main-content-image-section-images
-      {
-        width: 100%;
-        height: 10%;
-        flex-direction:row;
-        
-        .main-content-image-section-image
-        {
+        .section-image {
           padding: 10px;
         }
       }
 
-      .main-content-image-section-column{
+      .section-column {
+        align-items: center;
         display: flex;
-        flex-direction: column-reverse; /* Cambiar la dirección a columna para que el div esté debajo */
+        flex-direction: column;
+        margin: 10px;
+        width: 100%;
 
-        .main-content-image-section-image 
-        {
+        .section-image {
+          border-radius: 10px;
+          padding: 20px;
           width: 100%;
+        }
+
+        .section-shopping {
+          background-color: var(--bg-skeleton-color);
+          border-radius: 10px;
           padding: 10px;
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'images'
+      'info'
+      'comment';
+    padding: 5px;
+
+    .main-content-image {
+      .image-section {
+        width: 100%;
+        flex-direction: column-reverse;
+
+        .section-images {
+          width: 100%;
+          height: 10%;
+          flex-direction: row;
+
+          .section-image {
+            padding: 10px;
+          }
+        }
+
+        .section-column {
+          display: flex;
+          flex-direction: column-reverse;
+
+          .section-image {
+            width: 100%;
+            padding: 10px;
+          }
+        }
+      }
+    }
+
+    .main-content-comments {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        'Califications'
+        'newComment'
+        'PublicComments';
+
+      .section-califications {
+        .califications-div {
+          width: 100%;
+
+          .rating-bar {
+            .progress-container {
+              width: 100%;
+            }
+          }
+        }
+      }
+
+      .section-newComment {
+        .comments-form {
+
+          .form-input {
+            display: flex;
+            flex-direction: column-reverse;
+
+            .form-group {
+              flex-direction: column;
+
+              .form-input {
+                border: none;
+                border-bottom: 3px solid var(--secondary-borer-color);
+                display: flex;
+                outline: none;
+                flex: 1;
+                flex-direction: column;
+                font-size: 16px;
+                padding: 5px;
+                width: 100%;
+              }
+
+            }
+
+            .form-califications {
+              flex-direction: row;
+              padding: 10px 0;
+            }
+          }
+
+          .form-actions {
+            flex-direction: column-reverse;
+
+            .btn {
+              width: 100%;
+            }
+          }
         }
       }
     }
