--- a/src/pages/details/details-content-info.css
+++ b/src/pages/details/details-content-info.css
@@ -1,4 +1,4 @@
-.main-content-info {
+    .main-content-info {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 0.9fr 1.1fr;
     gap: 0px 0px;
@@ -8,13 +8,21 @@
         "description description description";
     grid-area: info;
 
-    .main-content-info-section {
+    .info-section {
         width: 100%;
 
-        .main-content-info-section-infoproduct {
+        .infoproduct {
             grid-area: infoproducto;
         }
 
+        .section-product-info{
+            display: flex;
+            flex-direction: row;
+
+            p{
+                padding: 5px;
+            }
+        }
         .body-card-text {
             border: solid 2px var(--primary-border-color);
             background-color: var(--br-color);
@@ -23,7 +31,7 @@
             width: 100%;
         }
 
-        .main-content-info-section-buttons {
+        .section-buttons {
             grid-area: buttons;
 
             .bg-primary-button {
@@ -36,7 +44,7 @@
                 color: var(--text-color);
             }
 
-            .main-content-info-section-button {
+            .section-button {
                 align-items: center;
                 border-radius: 10px;
                 height: 3.5rem;
@@ -46,12 +54,12 @@
                 width: 100%;
             }
 
-            .main-content-info-section-buttons-actions {
+            .buttons-actions {
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
 
-                .main-content-info-section-input {
+                .section-input {
                     border: solid 2px var(--primary-border-color);
                     border-radius: 10px;
                     margin-left: 5px;
@@ -61,7 +69,7 @@
                     text-align: center;
                 }
 
-                .main-content-info-section-button {
+                .section-button {
                     align-items: center;
                     background-color: var(--primary-border-color);
                     border-radius: 10px;
@@ -76,7 +84,7 @@
             }
         }
 
-        .main-content-info-section-description {
+        .section-description {
             margin-top: 10px;
             grid-area: description;
         }
