--- a/src/pages/details/details-content-image.css
+++ b/src/pages/details/details-content-image.css
@@ -1,53 +1,17 @@
-/*IMPORTANDO POPPINS*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap");
-
-/*Estableciendo variables*/
-:root {
-  --bg-color: #F2F5F7;
-  --primary-color: #0E0F10;
-  --secondary-color: #FADE3C;
-  --bg-skeleton-color: #D9D9D9;
-  --primary-border-color: #878787;
-  --secondary-borer-color: #000000;
-  --text-color: #000000;
-  --text-color-revert: #F2F5F7;
-  --text-accent-color: #868686;
-}
-
-*,
-::after,
-::before {
-  /*Reiniciando estilos*/
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-
-  /*Aplicando el estilo de fuente*/
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  color: var(--text-color);
-}
-
-body {
-  /*Aplicando color al body*/
-  background-color: var(--bg-color);
-}
-
 main {
   display: grid;
   /* Necesario para que funcione el grid */
-  grid-template-columns: 1.7fr 0.3fr 1.2fr;
-  grid-template-rows: 0.8fr 0.5fr 0.9fr;
-  gap: 0px 0px;
+  grid-template-columns: 1.7fr 1.2fr;
+  /* grid-template-rows: 0.8fr 0.5fr; */
   grid-template-areas:
-    "images images info"
-    "comment comment comment";
+    "images info"
+    "comment comment";
   padding: 20px 70px;
 
 
   .main-content-image {
     grid-area: images;
+    height: 100%;
 
     .image-section {
       width: 100%;
@@ -71,8 +35,11 @@ main {
 
         .section-image {
           border-radius: 10px;
-          padding: 20px;
+          /* padding: 20px; */
           width: 100%;
+          /* height: 490px;
+          max-height: 568.4px; */
+          object-fit: cover;
         }
 
         .section-shopping {
